--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -7,7 +7,7 @@
 
     <title>Taty Gazelle</title>
 
-    <link rel="stylesheet" href="{% static 'main/style.css' %}">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
     <link rel="icon" href="{% static 'main/favicon.ico' %}" type="image/x-icon">
 
     <meta name="description" content="Photography and visual art by Taty Gazelle.">
@@ -61,7 +61,7 @@
            target="_blank"
            rel="noopener"
            aria-label="Taty Gazelle on Instagram">
-            <img src="{% static 'main/instagram.png' %}" alt="Instagram">
+            <img src="{% static 'instagram.png' %}" alt="Instagram">
         </a>
 
         <p> @tatygazelle</p>
