Fix static paths and update settings for Whitenoise

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -8,7 +8,7 @@
     <title>Taty Gazelle</title>
 
     <link rel="stylesheet" href="{% static 'style.css' %}">
-    <link rel="icon" href="{% static 'main/favicon.ico' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 
     <meta name="description" content="Photography and visual art by Taty Gazelle.">
     <meta name="author" content="Taty Gazelle">
@@ -17,7 +17,7 @@
     <meta property="og:description" content="Portfolio of photography and visual storytelling." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.tatygazelle.com/" />
-    <meta property="og:image" content="{% static 'main/og-default.jpg' %}" />
+    <meta property="og:image" content="{% static 'og-default.jpg' %}" />
 </head>
 
 <body>
